Cannot make object single user after Duplicate Scene with Link Object Data #63220

Closed
opened 2019-04-02 15:04:26 +02:00 by Sebastian Koenig · 13 comments

System Information
Operating system: elementaryOS 0.4.1
Graphics card: GTX 1080
Broken: 2.80, 964b5f02ca
Worked: 2.79

Short description of error
When duplicating a scene by clicking "Link Object Data" it's not just the object data that becomes linked, but the object itself is somehow linked. There is apparently no way to make these objects single user objects anymore, not even by clicking on the little "2" next to object name in properties panel.

Exact steps for others to reproduce the error
Open attached file and try to make the cube a single user.
Or open default blender, click on duplicate scene with Link Object Data and look at user and behavior of "Cube".
single_user_copy.blend

**System Information** Operating system: elementaryOS 0.4.1 Graphics card: GTX 1080 Broken: 2.80, 964b5f02caf8 Worked: 2.79 **Short description of error** When duplicating a scene by clicking "Link Object Data" it's not just the object data that becomes linked, but the object itself is somehow linked. There is apparently no way to make these objects single user objects anymore, not even by clicking on the little "2" next to object name in properties panel. **Exact steps for others to reproduce the error** Open attached file and try to make the cube a single user. Or open default blender, click on duplicate scene with Link Object Data and look at user and behavior of "Cube". [single_user_copy.blend](https://archive.blender.org/developer/F6907260/single_user_copy.blend)
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

Added subscriber: @mont29

Added subscriber: @mont29

Just removed 'link object data' option (0554b2e177)… ;) So guess that's no more relevant?

Just removed 'link object data' option (0554b2e177)… ;) So guess that's no more relevant?
Author
Member

What?? This was a super useful feature which I used all the time. Being able to duplicate a scene, linking object data but still being able to move objects independently around was great.
Okay, but now that it is gone, how can I make an object local and unique to the current file?

What?? This was a super useful feature which I used all the time. Being able to duplicate a scene, linking object data but still being able to move objects independently around was great. Okay, but now that it is gone, how can I make an object local and unique to the current file?
Bastien Montagne self-assigned this 2019-04-02 17:23:14 +02:00

Eeeeh… yes there is indeed an issue here, should work based on viewlayer…

Eeeeh… yes there is indeed an issue here, should work based on viewlayer…

This issue was referenced by a813e259d6

This issue was referenced by a813e259d6309b25fbd0a6d506df810ad2b11395

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @Dez

Added subscriber: @Dez

This comment was removed by @Dez

*This comment was removed by @Dez*
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Note this issue is also handled/present in #92978 ("Make Single User" does not unlink object from other scenes when creating Scene using "Linked Copy")

Note this issue is also handled/present in #92978 ("Make Single User" does not unlink object from other scenes when creating Scene using "Linked Copy")

@lichtwerk this is a completely different issue actually, #92978 happens because we do not only share the objects, but also the collections, so technically after a link copy of a scene, the objects still have a single user (their collection), it's the collections that now have two users (the old and new scenes).

@lichtwerk this is a completely different issue actually, #92978 happens because we do not only share the objects, but also the collections, so technically after a link copy of a scene, the objects still have a single user (their collection), it's the collections that now have two users (the old and new scenes).
Member

I know it now works via collections (and the objects now only having a single user), from the user perspective this is similar though: "how do you make fully linked copies of scenes with the ability to still move objects independently".
Just noting that (even though on a technical level these might be different issues)

I know it now works via collections (and the objects now only having a single user), from the user perspective this is similar though: "how do you make fully linked copies of scenes with the ability to still move objects independently". Just noting that (even though on a technical level these might be different issues)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63220
No description provided.